--- a/dobot_server/files/config.yaml
+++ b/dobot_server/files/config.yaml
@@ -6,7 +6,7 @@ server:
   robots_url: "http://myDobot.factory.com"
   log_server_url: "http://logserver.factory.com"
   refresh_rate: 5
-  security_policy: [Basic256Sha256_SignAndEncrypt]
+  security_policy: []
   country_name: "CZ"
   state_or_province_name: "state"
   locality_name: "locality"
@@ -15,15 +15,15 @@ server:
 programs:
   - program: 1
     path: "/server/dobot_server/files/programs/move_cube.txt"
-    time_length: 24
+    time_length: 60
 
   - program: 2
     path: "/server/dobot_server/files/programs/move_stacked_up_cubes.txt"
-    time_length: 30
+    time_length: 120
 
   - program: 3
     path: "/server/dobot_server/files/programs/stack_up_cubes.txt"
-    time_length: 60
+    time_length: 90
 
 robots:
   - label: "robot_1"
